# nicenote

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  GEMINI.md  eslint.config.js  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.build.json  tsconfig.json  turbo.json  vitest.workspace.ts
.docs/: ARCH-review-and-plan.md  PLAN-desktop-tauri.md  PLAN-desktop.md  PRD-desktop.md  code_review.md  optimization-plan.md  optimization-report.md  tech-debt-audit-2026-02-14.md
.github/workflows/: ci-cd.yml  deploy-api.yml  deploy-web.yml
.husky/: pre-commit
.qoder/: prompts.md
apps/api/: GEMINI.md  drizzle.config.ts  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
apps/api/drizzle/: 0000_cloudy_speed_demon.sql  (+1 more)
apps/desktop/: .gitignore  Taskfile.yml  app.go  go.mod  go.sum  main.go  types.go
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: cache.rs  folder.rs  mod.rs  note.rs  search.rs  watcher.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/desktop/src-tauri/src/services/: frontmatter.rs  mod.rs  note_io.rs  search_engine.rs  search_index.rs  utils.rs
apps/web/: GEMINI.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
tools/code-review/: claude-loop-nocommit.sh  claude-loop.sh
(+84 files in other folders)
